# RoleMaster

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  Readme.md  docker-compose.yml
migrations/: 20241110145843_create_users_table.up.sql  20241110151639_create_user_miss_count_table.down.sql  20241110151639_create_user_miss_count_table.up.sql  20241110151706_create_role_assignment_table.down.sql  20241110151706_create_role_assignment_table.up.sql  20241110151736_create_reaction_emoji_settings_table.down.sql  20241110151736_create_reaction_emoji_settings_table.up.sql  20241116075023_create_exclusion_roles_table.down.sql  20241116075023_create_exclusion_roles_table.up.sql
src/: db_manager.rs  event_handler.rs  job_manager.rs  main.rs
src/commands/: cancel_entry.rs  command_register.rs  dice.rs  entry.rs  list_entry.rs  mod.rs  ping.rs  reset_roles.rs
