[package]
authors = ["meronmks"]
name = "role_master"
version = "1.0.0-alpha.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serenity = "0.12"
tokio = { version = "1.43.1", features = ["macros", "rt-multi-thread"] }
log = "0.4"
env_logger = "0.11.5"
rand = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
chrono = "0.4"
tokio-cron-scheduler = { version = "0.13", features = ["signal"]}
once_cell = "1.20.2"